# potatehoes

./: .travis.yml  API.h  BNSLibTest.c  CMakeLists.txt  CarterCode.c  CarterCodeHayden  README.md  VEX_Cortex_1056.hex  auton.c  functions.c  hayden.c  index.html  leftPID.c  m.c  main.h  oldAuton.c  opcontrol.c  robot#1.0.c  robot.c  worstCaseScenario.c
BNSLibrary/Examples/: MotionProfileExample.c  PIDExample.c
badOldIDKWhyCode/: auton.c  autonRun.c  drive.c  functions.c  intake.c  lcdCodeChooserEx.c  leftPID.c  puncher.c  rightPID.c  robot#0.1.c  robotDebug.c  stupidRobot.c  variables.c
cleanerDirectory/: CMakeLists.txt  VEX_Cortex_1056.hex  impulseGearing.c  oldAuton.c
cleanerDirectory/Schooling/: 2019-02-25-English-Analysis-Essay.md
cleanerDirectory/oldCode/: worstCaseScenario.c
code2017/ImpulseGearing/: Ball Launcher.c
code2017/TShirtCannon/: ABC123.c
include/: API.h  PID.h  blueFront5.c  mAPI.h  philAPI.h  redBack.c  redFront.c  redFront.h  testAPI.h
include/images/: locktiteGang.ai
oldCode/: auton.c
pros/include/: API.h  main.h
pros/src/: init.c  opcontrol.c
robotCIncludes/: NatLang_Legacy_CORTEX.c
sampleCode/: T-Shirt Cannon Thing  abc.c  basicRobotCode.c  oldRobotCode.c  user.c  userFunctions.c
src/: auton.c  init.c
